# best-practices-cmake-full-example

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.rst
project/cmake/example/: CMakeLists.txt
project/cmake/libll/: CMakeLists.txt
project/cmake/libtl/: CMakeLists.txt
project/cmake/test/libll/: CMakeLists.txt
project/cmake/test/libtl/: CMakeLists.txt
src/example/: example.cpp
src/ll/: ll.cpp  ll.hpp
src/tl/: tl.hpp
test/ll/: test_ll.cpp
test/tl/: test_tl.cpp
